# rust-webapp

./: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
migrations/2023-10-08-125916_create_posts/: up.sql
src/: main.rs  models.rs
