[package]
name = "rust-webapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.3", features = ["mysql"] }
dotenv = "0.15.0"
rocket = "=0.5.0-rc.3"
serde = { version = "1.0.188", features = ["derive"] }

[registries.crates-io]
protocol = "sparse"